tests/invalid/NegationType_Invalid_2.whiley
function f(int x) -> ((int|null) & (null|bool) r):
    return x
